Fix various Javadoc warnings/errors with Java 9 by aligning with 8.5.x