@@ -41,6 +41,7 @@ import org.apache.tomcat.util.ExceptionUtils;
  * AccessLogValve.
  * To use, copy into the server/classes directory of the Tomcat installation
  * and configure in server.xml as:
+ * </p>
  * <pre>
  *      &lt;Valve className="org.apache.catalina.valves.JDBCAccessLogValve"
  *          driverName="<i>your_jdbc_driver</i>"
@@ -48,7 +49,6 @@ import org.apache.tomcat.util.ExceptionUtils;
  *          pattern="combined" resolveHosts="false"
  *      /&gt;
  * </pre>
- * </p>
  * <p>
  * Many parameters can be configured, such as the database connection (with
  * <code>driverName</code> and <code>connectionURL</code>),
@@ -166,7 +166,7 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
     * Use long contentLength as you have more 4 GB output.
     * @since 6.0.15
     */
-    boolean useLongContentLength = false ;
+    boolean useLongContentLength = false;
 
    /**
      * The connection username to use when trying to connect to the database.
@@ -243,8 +243,7 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
     }
 
     /**
-     * Return the username to use to connect to the database.
-     *
+     * @return the username to use to connect to the database.
      */
     public String getConnectionName() {
         return connectionName;
@@ -268,9 +267,8 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
         this.driverName = driverName;
     }
 
-   /**
-     * Return the password to use to connect to the database.
-     *
+    /**
+     * @return the password to use to connect to the database.
      */
     public String getConnectionPassword() {
         return connectionPassword;
@@ -367,11 +365,11 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
     }
 
 
-  /**
-   * Sets the name of the field containing the HTTP response status code.
-   *
-   * @param statusField The name of the HTTP response status code field.
-   */
+    /**
+     * Sets the name of the field containing the HTTP response status code.
+     *
+     * @param statusField The name of the HTTP response status code field.
+     */
     public void setStatusField(String statusField) {
         this.statusField = statusField;
     }
@@ -431,10 +429,11 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
     }
 
     /**
-     * get useLongContentLength
+     * @return <code>true</code> if content length should be considered a long
+     *  rather than an int, defaults to <code>false</code>
      */
-    public  boolean getUseLongContentLength() {
-        return this.useLongContentLength ;
+    public boolean getUseLongContentLength() {
+        return this.useLongContentLength;
     }
 
     /**
@@ -576,7 +575,7 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
         if (driver == null) {
             try {
                 Class<?> clazz = Class.forName(driverName);
-                driver = (Driver) clazz.newInstance();
+                driver = (Driver) clazz.getConstructor().newInstance();
             } catch (Throwable e) {
                 ExceptionUtils.handleThrowable(e);
                 throw new SQLException(e.getMessage(), e);
